@@ -228,7 +228,6 @@ class WC_REST_Stripe_Settings_Controller_Test extends WP_UnitTestCase {
 	}
 
 	public function test_get_settings_returns_available_payment_method_ids() {
-		update_option( '_wc_stripe_feature_link', 1 );
 		$response = $this->rest_get_settings();
 
 		$expected_method_ids = WC_Stripe_UPE_Payment_Gateway::UPE_AVAILABLE_METHODS;
